update for HANABINOVATION

--- a/ポートフォリオ.md
+++ b/ポートフォリオ.md
@@ -108,8 +108,8 @@ style: |
     4. [自転車用後方検知システム](#2-4-自転車用後方検知システム)
     5. [学生向けカレンダーアプリ](#2-5-学生向けカレンダーアプリ)
     6. [Google From自動入力](#2-6-google-from自動入力)
-    7. [体験型ARアートイベント](#2-7-体験型arアートイベント) <- 一番注力して開発しました
-    8. [多人数参加型アート作成アプリ](#2-8-多人数参加型アート作成アプリ)
+    7. [体験型ARアートイベント](#2-7-体験型arアートイベント)
+    8. [多人数参加型アート作成アプリ](#2-8-多人数参加型アート作成アプリ) <- 一番注力して開発しました
 3. [リポジトリURL一覧](#3-リポジトリurl一覧)
 
 ---
@@ -338,15 +338,15 @@ style: |
         - Route53, S3, CloudFront, EC2, ALB, ACM, Lambda, ...
 
 ---
-# 2-8. [多人数参加型アート作成アプリ](https://github.com/KSF2024/Documents/blob/main/%E3%82%A2%E3%83%97%E3%83%AA%E4%BC%81%E7%94%BB%E6%9B%B8.md)
+# 2-8. [多人数参加型アート作成アプリ](https://hanabinovation.org/HF5W2T/create-firework/)
 ![bg left:30% h:700](image-9.png)
 - プロジェクト名: 「HANABINOVATION」
 - 担当: プロジェクトマネージャー, 企画, 設計, バックエンド, フロントエンド
 - 制作時期: 3年次前期
-- 使用予定技術: Typescript, React, MUI, Vite, AWS
+- 使用技術: Typescript, React, AWS Cloud9
+    - 企画, 設計, 花火のアニメーション, バックエンド, 企画運営を担当
 - プロジェクト説明:
-    - 2024年度河原学園大学園祭において、ITイノベーション科3年より公開予定のWebアプリ
-    - 現在設計/開発段階
+    - 2024年度河原学園大学園祭において、ITイノベーション科3年より公開したWebアプリ
 
 ---
 # 2-8. 多人数参加型アート作成アプリ
@@ -357,6 +357,7 @@ style: |
     - 学園祭の来場者全員が作成した花火が集まり、1つの大きなアート作品になることを目指している
 
 ---
+
 # 2-8. 多人数参加型アート作成アプリ
 - プロジェクトの背景
     - ITイノベーション科が抱える、学園祭の出し物に関する問題解決が目的
@@ -368,6 +369,51 @@ style: |
                 => 花火をドカンと打ち上げる、アートアプリを提供
 
 ---
+
+# 2-8. 多人数参加型アート作成アプリ
+- アプリの説明
+    - 一言で表すとスタンプラリーアプリ
+        1. ユーザーは花火のデザインをセットアップから選択する
+            - スタンプラリーでいうところの"スタンプ"をデザインする行為
+        2. その後、デザインした花火の写真を撮る
+            - スタンプラリーアプリでいうところの"スタンプを押す"行為
+        3. 写真を撮り終えると、他の人がデザインした花火が打ち上がっている様子を見られる
+    - アプリ使用イメージ:
+        https://drive.google.com/file/d/1gU66D9UQvG3TQLsnPy_2oHfkDGBGQmfC/view?usp=sharing
+
+---
+
+# 2-8. 多人数参加型アート作成アプリ
+- 工夫点
+    - [企画書](https://github.com/KSF2024/Documents/blob/main/%E3%82%A2%E3%83%97%E3%83%AA%E4%BC%81%E7%94%BB%E6%9B%B8.md)から[要件定義書](https://github.com/KSF2024/Documents/blob/main/%E8%A6%81%E4%BB%B6%E5%AE%9A%E7%BE%A9%E6%9B%B8.md)の作成、実装、運用までを一貫して行った
+    - スタンプラリー制覇のインセンティブとして、「抽選で当たる景品」「自分のデザインした花火のプロジェクターによる投影」という2つを用意した
+        - プロジェクター投影イメージ:
+            https://drive.google.com/file/d/14KW8CkL66k-4RLsR4RA5uoDzI8VtH3uI/view?usp=sharing
+            - 過去に自分がデザインした花火を、一斉にプロジェクター画面内に打ち上げる機能
+
+---
+
+# 2-8. 多人数参加型アート作成アプリ
+- 成果
+    - 120人のユーザーにアプリを使ってもらえた
+        - その内、24人のユーザーが10箇所のラリーポイントを制覇してくれた
+    - 「体験型ARアートイベント」でお世話になった愛媛新聞社様から、スマコレランドまつやまというところでこのプロジェクトをやってみたいというお声がけをいただいた
+- 課題
+    - 学園祭参加者が9,000人程いるらしいので、その内の120人は少ないと感じた
+        - 「スタンプラリーはやらない」という声が聞こえたので、そもそも需要がなかったのかもしれない(インセンティブが悪かった？)
+
+---
+
+# 2-8. 多人数参加型アート作成アプリ
+- 課題
+    - 企画書を出したのは学園祭当日の3か月前なのに、1週間前になって突然「ステージイベントとして抽選会は実施できない」と知らされた
+        - 企画書を上げた段階ではその年の学園祭実行委員会が設立されておらず、責任の所在が不明瞭となっていた
+        - 上長である先生を通して学園祭実行委員会と連絡を取っていたため、確認を怠るとすぐ進捗が分からなくなってしまっていた
+- 学んだこと, 今後の展望
+    - 「責任の所在を明確にする」「こまめな進捗確認」といった、綿密なコミュニケーションを取ることが、企画の根回しには非常に大切だと感じた
+        - 次回からは、どうしても間に人間を挟む必要がある場合はこまめに進捗を確認したり、期限を決めたいと思った
+
+---
 # 3. リポジトリURL一覧
 - 「[ジャンプゲーム](https://github.com/CA01971148/jumpgame)」
 - TRPG用キャラクターデータ管理システム「[ドラルフ神話戦闘データエディタ](https://github.com/LyriDev/DralphMyth-EnemyData)」
@@ -377,4 +423,4 @@ style: |
     - サーバーサイドのリポジトリ「[MyScheduleServer](https://github.com/CA01971172/MyScheduleServer)」
 - 「[Google From自動入力](https://github.com/CA01971172/GoogleFormAutoFiller)」
 - 体験型ARアートイベント「[みんなの空間 ~We are what we do~](https://github.com/we-are-what-we-do/we-are-what-we-do)」
-- 多人数参加型アート作成アプリ「[HANABINOVATION](https://github.com/KSF2024/Documents)」(企画書・設計書)
+- 多人数参加型アート作成アプリ「[HANABINOVATION](https://github.com/KSF2024/HANABINOVATION)」
